# fixtestharness

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  sonar-project.properties
.github/ISSUE_TEMPLATE/: config.yml
apps/: harness_main.cpp  test_receiver_main.cpp  test_sender_main.cpp
include/fix/: FixLogProcessor.hpp  FixMessage.hpp  TestReceiver.hpp  TestSender.hpp
src/: FixLogProcessor.cpp  FixMessage.cpp  TestReceiver.cpp  TestSender.cpp
test/: FixHarnessTest.cpp
